// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package chromeos.karte;

import "google/protobuf/timestamp.proto";

option go_package = "infra/cros/karte/api;kartepb";

// A SearchQuery contains filters.
message SearchQuery {
  ActionCategoricalFilter action_filter = 1;
  StopTimeOrderableActionFilter stop_time_action_filter = 2;
  ObservationCategoricalFilter observation_filter = 3;
  ValueNumberOrderableObservationFilter value_number_observation_filter = 4;
}

message ActionCategoricalFilter {
  string name = 1;
  string kind = 2;
  string swarming_task_id = 3;
  string fail_component = 4;
  bool is_status_unspecified = 5;
  bool is_success = 6;
  bool is_fail = 7;
}

message StopTimeOrderableActionFilter {
  google.protobuf.Timestamp stop_time_le_x = 4;
  google.protobuf.Timestamp stop_time_ge_x = 5;
}

message ObservationCategoricalFilter {
  string name = 1;
  string action_name = 2;
  string metric_kind = 3;
  string value_string = 4;
}

message ValueNumberOrderableObservationFilter {
  google.protobuf.Timestamp value_number_le_x = 1;
  google.protobuf.Timestamp value_number_ge_x = 2;
}
